--- a/data/cards/08508055.yaml
+++ b/data/cards/08508055.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     目标是成为鼠界最强的格斗家而在世界范围内流浪的热血鼠。无知的触碰它会很受伤哦。
 card_type: Monster
-monster_type_line: Beast
+monster_type_line: Beast / Normal
 attribute: EARTH
 level: 3
 atk: 1200
