--- a/data/cards/34100324.yaml
+++ b/data/cards/34100324.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     梦想有一天能以美丽的姿态华丽飞舞、敏锐攻击的鹰身少女。
 card_type: Monster
-monster_type_line: Winged Beast
+monster_type_line: Winged Beast / Normal
 attribute: WIND
 level: 2
 atk: 500
