--- a/data/cards/35322812.yaml
+++ b/data/cards/35322812.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     谜之大木人18号，由魔界尖端技术改造后的姿态。由于重点放在了坚固的装甲上，因此牺牲了机动性。
 card_type: Monster
-monster_type_line: Machine
+monster_type_line: Machine / Normal
 attribute: FIRE
 level: 5
 atk: 500
