--- a/data/cards/37265642.yaml
+++ b/data/cards/37265642.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     性格温顺而闻名的恐龙。据说喜欢在大草原的小巢里悠闲自在地过日子。生起气来很可怕。
 card_type: Monster
-monster_type_line: Dinosaur
+monster_type_line: Dinosaur / Normal
 attribute: EARTH
 level: 4
 atk: 1900
