--- a/data/cards/49563947.yaml
+++ b/data/cards/49563947.yaml
@@ -35,7 +35,7 @@ text:
   zh-CN: |-
     支配水的魔法师的真正姿态。制造绝对无法破坏的巨大冰墙守备攻击。
 card_type: Monster
-monster_type_line: Spellcaster
+monster_type_line: Spellcaster / Normal
 attribute: WATER
 level: 6
 atk: 1200
