--- a/data/cards/69247929.yaml
+++ b/data/cards/69247929.yaml
@@ -35,7 +35,7 @@ text:
   zh-CN: |-
     被遗传基因操作所强化的狼人。本来的和善之心被完全破坏，肉体变成只为战斗而生。其破坏力不可估量。
 card_type: Monster
-monster_type_line: Beast-Warrior
+monster_type_line: Beast-Warrior / Normal
 attribute: EARTH
 level: 4
 atk: 2000
