--- a/data/cards/86652646.yaml
+++ b/data/cards/86652646.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     1000年前与主人不幸走散的迷犬。至今仍在等待着主人能够回来。
 card_type: Monster
-monster_type_line: Beast
+monster_type_line: Beast / Normal
 attribute: EARTH
 level: 4
 atk: 1350
