--- a/data/cards/12057781.yaml
+++ b/data/cards/12057781.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     为了完全弄懂暗黑界的文字，而日日精进的小矮人。将一切精力全部奉献于研究之中。
 card_type: Monster
-monster_type_line: Fiend
+monster_type_line: Fiend / Normal
 attribute: DARK
 level: 1
 atk: 400
