--- a/data/cards/23635815.yaml
+++ b/data/cards/23635815.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     名叫软糖的豆战士。虽坚信自己就是世界最强的战士，其实力不得而知。
 card_type: Monster
-monster_type_line: Plant
+monster_type_line: Plant / Normal
 attribute: EARTH
 level: 3
 atk: 1750
