--- a/data/cards/36119641.yaml
+++ b/data/cards/36119641.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     在广大的银河中漂流的宇宙飞船。从外太空-四号的超文明遗迹中被发现的活化石。
 card_type: Monster
-monster_type_line: Fish
+monster_type_line: Fish / Normal
 attribute: WATER
 level: 4
 atk: 1700
