--- a/data/cards/60246171.yaml
+++ b/data/cards/60246171.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     虽然时常摆着一副相当无助的姿态，却总让人觉得其实还隐藏着什么惊人潜在能力的样子。
 card_type: Monster
-monster_type_line: Fairy
+monster_type_line: Fairy / Normal
 attribute: WIND
 level: 3
 atk: 0
