--- a/data/cards/38798785.yaml
+++ b/data/cards/38798785.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>炎<rt>えん</rt></ruby><ruby>王<rt>おう</rt></ruby>の<ruby>結<rt>けっ</rt></ruby><ruby>襲<rt>しゅう</rt></ruby>
   ja_romaji: En'ō no Kesshū
-  ko:
+  ko: 염왕의 결습
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の手札・デッキ・墓地からそれぞれ１体ずつ、獣族・獣戦士族・鳥獣族の炎属性モンスターを特殊召喚する（同じ種族は１体まで）。この効果で特殊召喚したモンスターの効果は無効化され、エンドフェイズに破壊される。②：墓地のこのカードを除外して発動できる。このターン、自分の「炎王」モンスターの召喚・特殊召喚成功時に相手は魔法・罠・モンスターの効果を発動できない。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신의 패 / 덱 / 묘지에서 각각 1장씩, 야수족 / 야수전사족 / 비행야수족인 화염 속성 몬스터를 특수 소환한다(같은 종족은 1장까지). 이 효과로 특수 소환한 몬스터의 효과는 무효화되고, 엔드 페이즈에 파괴된다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 이 턴에, 자신의 "염왕" 몬스터의 일반 소환 / 특수 소환 성공시에 상대는 마법 / 함정 / 몬스터의 효과를 발동할 수 없다.
   zh-TW:
   zh-CN:
 card_type: Trap
