--- a/data/cards/38910263.yaml
+++ b/data/cards/38910263.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>炎<rt>えん</rt></ruby><ruby>王<rt>おう</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>ハヌマーン
   ja_romaji: En'ōjū Hanumān
-  ko:
+  ko: 염왕수 하누만
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドの表側表示の「炎王」モンスターが効果で破壊された場合に発動できる。このカードを手札から特殊召喚する。②：このカードがモンスターゾーンに存在し、魔法・罠カードの効果が発動した時に発動できる。その発動を無効にし、このカード以外の自分の手札・フィールド（表側表示）の炎属性モンスター１体を破壊する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 앞면 표시의 "염왕" 몬스터가 효과로 파괴되었을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 몬스터 존에 존재하고, 마법 / 함정 카드의 효과가 발동했을 때에 발동할 수 있다. 그 발동을 무효로 하고, 이 카드 이외의 자신의 패 / 필드(앞면 표시)의 화염 속성 몬스터 1장을 파괴한다.
   zh-TW:
   zh-CN:
 card_type: Monster
