--- a/data/cards/65305978.yaml
+++ b/data/cards/65305978.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>炎<rt>えん</rt></ruby><ruby>王<rt>おう</rt></ruby>の<ruby>聖<rt>せい</rt></ruby><ruby>域<rt>いき</rt></ruby>
   ja_romaji: En'ō no Seiiki
-  ko:
+  ko: 염왕의 성역
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：このカードの発動時の効果処理として、デッキから「炎王の孤島」１枚を自分のフィールドゾーンに表側表示で置く事ができる。②：１ターンに１度、自分のフィールドゾーンのカードが効果で破壊される場合、代わりに自分の手札・フィールド（表側表示）の炎属性モンスター１体を破壊できる。③：１ターンに１度、相手がモンスターを特殊召喚した場合に発動できる。自分フィールドの「炎王」モンスターのみを素材として炎属性Ｘモンスター１体のＸ召喚を行う。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장 밖에 발동할 수 없다. ①: 이 카드의 발동시의 효과 처리로서, 덱에서 "염왕의 고도" 1장을 자신의 필드 존에 앞면 표시로 놓을 수 있다. ②: 1턴에 1번, 자신의 필드 존의 카드가 효과로 파괴될 경우, 대신에 자신의 패 / 필드(앞면 표시)의 화염 속성 몬스터 1장을 파괴할 수 있다. ③: 1턴에 1번, 상대가 몬스터를 특수 소환했을 경우에 발동할 수 있다. 자신 필드의 "염왕" 몬스터만을 소재로서 화염 속성 엑시즈 몬스터 1장의 엑시즈 소환을 실행한다.
   zh-TW:
   zh-CN:
 card_type: Spell
