--- a/data/cards/31991800.yaml
+++ b/data/cards/31991800.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 monstro "Majespectro" do seu Deck à sua mão. Você só pode usar este efeito de "Guaxinim Majespectro - Bunbuku" uma vez por turno. Não pode ser escolhido como alvo ou destruído por efeitos de card do seu oponente.
   ja: |-
-    「マジェスペクター・ラクーン」の①のモンスター効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した時に発動できる。デッキから「マジェスペクター」モンスター１体を手札に加える。②：このカードはモンスターゾーンに存在する限り、相手の効果の対象にならず、相手の効果では破壊されない。
+    このカード名の①のモンスター効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した時に発動できる。デッキから「マジェスペクター」モンスター１体を手札に加える。②：このカードはモンスターゾーンに存在する限り、このカードは相手の効果では破壊されず、相手はこのカードを効果の対象にできない。
   ko: |-
     "마제스펙터 라쿤"의 ①의 몬스터 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 때에 발동할 수 있다. 덱에서 "마제스펙터" 몬스터 1장을 패에 넣는다. ②: 이 카드는 몬스터 존에 존재하는 한, 상대의 효과 대상이 되지 않으며, 상대의 효과로는 파괴되지 않는다.
   zh-TW:
@@ -105,6 +105,10 @@ sets:
   ja:
   - set_number: DOCS-JP026
     set_name: Dimension of Chaos
+    rarities:
+    - Common
+  - set_number: 23TP-JP406
+    set_name: Tournament Pack 2023 Vol.4
     rarities:
     - Common
   ko:
