--- a/data/cards/23995346.yaml
+++ b/data/cards/23995346.yaml
@@ -321,7 +321,7 @@ sets:
     rarities:
     - Rare
   - set_number: MSC1-JP001
-    set_name: Yu-Gi-Oh! Duel Monsters x Monster Strike Collaboration Commemoration cards
+    set_name: Monster Strike collaboration cards
     rarities:
     - Common
     - Millennium Rare
