--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -744,7 +744,7 @@ sets:
     - Extra Secret Rare
     - Quarter Century Secret Rare
   - set_number: PPC2-JP001
-    set_name: Yu-Gi-Oh! Duel Monsters x Power Pros Collaboration commemorative cards 2
+    set_name: Power Pros 2023 collaboration cards
     rarities:
     - Common
     - Normal Parallel Rare
