--- a/data/cards/44430454.yaml
+++ b/data/cards/44430454.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     暗地里支持六武众的充满谜团的人物。虽然现在已经不再参战，但是刻在身上的无数伤痕诉说着什么。他的过去无人知晓。
 card_type: Monster
-monster_type_line: Warrior
+monster_type_line: Warrior / Normal
 attribute: EARTH
 level: 3
 atk: 200
