--- a/data/cards/68075840.yaml
+++ b/data/cards/68075840.yaml
@@ -43,7 +43,7 @@ images:
 sets:
   ja:
   - set_number: PPC2-JP002
-    set_name: Yu-Gi-Oh! Duel Monsters x Power Pros Collaboration commemorative cards 2
+    set_name: Power Pros 2023 collaboration cards
     rarities:
     - Common
     - Normal Parallel Rare
