--- a/data/cards/97127906.yaml
+++ b/data/cards/97127906.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     神秘生命体外星人的上级战士。虽然拥有较高的攻击力，另一方面特殊能力却没掌握。
 card_type: Monster
-monster_type_line: Reptile
+monster_type_line: Reptile / Normal
 attribute: EARTH
 level: 4
 atk: 1900
