--- a/data/cards/49858495.yaml
+++ b/data/cards/49858495.yaml
@@ -48,7 +48,7 @@ images:
 sets:
   ja:
   - set_number: PPC1-JP002
-    set_name: Yu-Gi-Oh! Duel Monsters x Power Pros Collaboration Commemorative cards
+    set_name: Power Pros collaboration cards
     rarities:
     - Common
     - Normal Parallel Rare
