--- a/data/cards/22499463.yaml
+++ b/data/cards/22499463.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     被坚硬鳞片覆盖全身的巨大眼镜蛇，能射出大量的毒液攻击，但因为体型的巨大，毒液并无任何特别之处。
 card_type: Monster
-monster_type_line: Reptile
+monster_type_line: Reptile / Normal
 attribute: EARTH
 level: 4
 atk: 100
