--- a/data/cards/26976414.yaml
+++ b/data/cards/26976414.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     侍奉据说支配着海底的海皇的长枪兵。从深暗海底袭击过来的长枪的连续攻击为深海鱼们所畏惧。
 card_type: Monster
-monster_type_line: Sea Serpent
+monster_type_line: Sea Serpent / Normal
 attribute: WATER
 level: 2
 atk: 1400
