--- a/data/cards/90582719.yaml
+++ b/data/cards/90582719.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     以高攻击力追逼敌人的独眼战熊。挨了以恐怖的速度和重量著称的自豪拳头没有还不倒者。
 card_type: Monster
-monster_type_line: Beast-Warrior
+monster_type_line: Beast-Warrior / Normal
 attribute: EARTH
 level: 4
 atk: 1900
