--- a/data/cards/40640057.yaml
+++ b/data/cards/40640057.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Durante o cálculo de dano, se um monstro do seu oponente atacar (Efeito Rápido): você pode descartar este card; você não sofre dano de batalha dessa batalha.
   ja: |-
-    ①：相手モンスターの攻撃で自分が戦闘ダメージを受けるダメージ計算時にこのカードを手札から捨てて発動できる。その戦闘で発生する自分への戦闘ダメージを０にする。
+    ①：相手モンスターの攻撃で自分が戦闘ダメージを受けるダメージ計算時に、このカードを手札から捨てて発動できる。その戦闘で発生する自分への戦闘ダメージを０にする。
   ko: |-
     ①: 상대 몬스터의 공격으로 자신이 전투 데미지를 받는 데미지 계산시에 이 카드를 패에서 버리고 발동할 수 있다. 그 전투로 발생하는 자신에게로의 전투 데미지를 0 으로 한다.
   zh-TW:
