--- a/data/cards/53183600.yaml
+++ b/data/cards/53183600.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Não pode ser Invocado por Invocação-Normal/Baixado. Você primeiro deve Invocá-lo por Invocação-Especial (da sua mão) ao oferecer 2 monstros como Tributo, enquanto você controlar "Mundo Toon". Não pode atacar no turno em que for Invocado por Invocação-Especial. Você deve pagar 500 PV para declarar um ataque com este monstro. Se "Mundo Toon", no campo, for destruído, destrua este card. Pode atacar diretamente seu oponente, a não ser que ele controle um monstro Toon, em cujo caso este card deve escolher um monstro Toon como alvo de seus ataques.
   ja: |-
-    このカードは通常召喚できない。自分フィールドに「トゥーン・ワールド」が存在し、自分フィールドのモンスター２体をリリースした場合に特殊召喚できる。①：このカードは特殊召喚したターンには攻撃できない。②：このカードは５００ＬＰを払わなければ攻撃宣言できない。③：このカードは、相手フィールドにトゥーンモンスターが存在しない場合、直接攻撃できる。存在する場合、トゥーンモンスターしか攻撃対象に選択できない。④：フィールドの「トゥーン・ワールド」が破壊された時にこのカードは破壊される。
+    このカードは通常召喚できない。自分フィールドに「トゥーン・ワールド」が存在する状態で、自分フィールドのモンスター２体をリリースした場合に特殊召喚できる。①：このカードは特殊召喚したターンには攻撃できない。②：このカードの攻撃宣言の際に、自分は５００ＬＰを払わなければならない。③：このカードは、相手フィールドにトゥーンモンスターが存在しない場合、直接攻撃できる。存在する場合、トゥーンモンスターしか攻撃対象に選択できない。④：フィールドの「トゥーン・ワールド」が破壊された時にこのカードは破壊される。
   ko: |-
     이 카드는 통상 소환할 수 없다. 자신 필드에 "툰 월드"가 존재하고, 자신 필드의 몬스터 2장을 릴리스했을 경우에 특수 소환할 수 있다. ①: 이 카드는 특수 소환한 턴에는 공격할 수 없다. ②: 이 카드의 공격 선언 시기에, 자신은 500 LP 를 지불해야 한다. ③: 상대 필드에 툰 몬스터가 존재하지 않을 경우, 이 카드는 직접 공격할 수 있다. 존재할 경우, 툰 몬스터를 공격 대상으로 해야 한다. ④: 필드의 "툰 월드"가 파괴되었을 때에 이 카드는 파괴된다.
   zh-TW:
