--- a/rush.yaml
+++ b/rush.yaml
@@ -20139,6 +20139,7 @@ atk: 500
 def: 200
 series:
 - Cat
+- Red-Eyes
 images:
 - index: 1
   image: RedEyesBlackCat-RDMAX1-JP-C.png
@@ -20194,6 +20195,7 @@ level: 1
 atk: 600
 def: 200
 series:
+- Blue-Eyes
 - Cat
 images:
 - index: 1
