--- a/data/cards/20155904.yaml
+++ b/data/cards/20155904.yaml
@@ -54,17 +54,17 @@ images:
   image: ZoodiacKataroost-MACR-EN-C-1E.png
 sets:
   en:
-  - set_number: RATE-ENSE3
-    set_name: 'Raging Tempest: Special Edition'
-    rarities:
-    - Super Rare
   - set_number: MACR-EN027
     set_name: Maximum Crisis
     rarities:
     - Common
+  - set_number: RATE-ENSE3
+    set_name: Raging Tempest Special Edition
+    rarities:
+    - Super Rare
   de:
   - set_number: RATE-DESE3
-    set_name: 'Raging Tempest: Special Edition'
+    set_name: Raging Tempest Special Edition
     rarities:
     - Super Rare
   - set_number: MACR-DE027
@@ -73,7 +73,7 @@ sets:
     - Common
   fr:
   - set_number: RATE-FRSE3
-    set_name: 'Raging Tempest: Special Edition'
+    set_name: Raging Tempest Special Edition
     rarities:
     - Super Rare
   - set_number: MACR-FR027
@@ -82,7 +82,7 @@ sets:
     - Common
   it:
   - set_number: RATE-ITSE3
-    set_name: 'Raging Tempest: Special Edition'
+    set_name: Raging Tempest Special Edition
     rarities:
     - Super Rare
   - set_number: MACR-IT027
@@ -91,7 +91,7 @@ sets:
     - Common
   pt:
   - set_number: RATE-PTSE3
-    set_name: 'Raging Tempest: Special Edition'
+    set_name: Raging Tempest Special Edition
     rarities:
     - Super Rare
   - set_number: MACR-PT027
