--- a/data/rush/15164.yaml
+++ b/data/rush/15164.yaml
@@ -66,6 +66,11 @@ images:
   image: MultistrikeDragonDragias-RDKP12-JP-ORR.png
 - index: 4
   image: MultistrikeDragonDragias-RDCCC1-JP-NPR.png
+- index: 5
+  image: MultistrikeDragonDragias-RDECG1-JP-OP.png
+- index: 6
+  image: MultistrikeDragonDragias-RDMRP2-JP-OP.png
+  illustration: MultistrikeDragonDragias-DBR-JP-VG-artwork-2.png
 sets:
   ja:
   - set_number: RD/ST02-JP001
@@ -112,6 +117,11 @@ sets:
     set_name: Rush Duel Card Game Gum
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/MRP2-JP025
+    set_name: Megaroad Pack 2
+    rarities:
+    - Rare
+    - Secret Rare
   ko:
   - set_number: RD/ST02-KR001
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
