--- a/data/rush/15649.yaml
+++ b/data/rush/15649.yaml
@@ -70,6 +70,10 @@ sets:
     set_name: Strongest Battle Deck Gavin - Demon Commander Three Legions
     rarities:
     - Common
+  - set_number: RD/MRP2-JP044
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/CP01-KR001
     set_name: Character Pack - Gavin/Roa/Romin
