--- a/data/rush/16772.yaml
+++ b/data/rush/16772.yaml
@@ -67,6 +67,7 @@ sets:
   - set_number: RD/MRP2-JP014
     set_name: Megaroad Pack 2
     rarities:
+    - Rare
     - Secret Rare
   ko:
   - set_number: RD/SBD1-KR019
