--- a/data/rush/16981.yaml
+++ b/data/rush/16981.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Super Rare
+  - set_number: RD/MRP2-JP051
+    set_name: Megaroad Pack 2
+    rarities:
+    - Rare
   ko:
   - set_number: RD/KP07-KR015
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
