--- a/data/rush/yugipedia1005414.yaml
+++ b/data/rush/yugipedia1005414.yaml
@@ -52,6 +52,7 @@ sets:
   - set_number: RD/MRP2-JP026
     set_name: Megaroad Pack 2
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
