--- a/data/cards/66431519.yaml
+++ b/data/cards/66431519.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>聖<rt>せい</rt></ruby><ruby>炎<rt>えん</rt></ruby><ruby>王<rt>おう</rt></ruby> ガルドニクス
   ja_romaji: Seien'ō Garudonikusu
-  ko:
+  ko: 성염왕 가루도닉스
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札・墓地に存在し、元々の属性が炎属性となる自分のモンスターが戦闘・効果で破壊された場合に発動できる。このカードを特殊召喚する。②：このカードが召喚・特殊召喚した場合に発動できる。「聖炎王 ガルドニクス」以外の自分の手札・デッキ・フィールド（表側表示）の獣族・獣戦士族・鳥獣族の炎属性モンスター１体を破壊する。このカードの攻撃力はターン終了時まで、この効果で破壊したモンスターの攻撃力の半分だけアップする。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패 / 묘지에 존재하고, 원래 속성이 화염 속성인 자신의 몬스터가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 이 카드를 특수 소환한다. ②: 이 카드를 일반 소환 / 특수 소환했을 경우에 발동할 수 있다. "성염왕 가루도닉스" 이외의 자신의 패 / 덱 / 필드(앞면 표시)의 야수족 / 야수전사족 / 비행야수족인 화염 속성 몬스터 1장을 파괴한다. 이 카드의 공격력은 턴 종료시까지, 이 효과로 파괴한 몬스터의 공격력의 절반만큼 올린다.
   zh-TW:
   zh-CN:
 card_type: Monster
