--- a/data/rush/15194.yaml
+++ b/data/rush/15194.yaml
@@ -59,6 +59,9 @@ series:
 images:
 - index: 1
   image: YamirulertheDarkDelayer-RDSBD3-JP-C.png
+  illustration: YamirulertheDarkDelayer-DBR-JP-VG-artwork.png
+- index: 2
+  image: YamirulertheDarkDelayer-RDMRP2-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP01-JP029
@@ -77,6 +80,11 @@ sets:
     set_name: Gold Rush Pack
     rarities:
     - Gold Rush Rare
+  - set_number: RD/MRP2-JP043
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
+    - Over Rush Rare
   ko:
   - set_number: RD/KP01-KR029
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
