--- a/data/rush/16769.yaml
+++ b/data/rush/16769.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: Strongest Battle Deck Yuga - Hyper Machine Road
     rarities:
     - Common
+  - set_number: RD/MRP2-JP010
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/SBD1-KR009
     set_name: Strongest Battle Deck Yuga - Hyper Machine Road
