--- a/data/rush/yugipedia1012486.yaml
+++ b/data/rush/yugipedia1012486.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>最<rt>サイ</rt></ruby><ruby>強<rt>キョー</rt></ruby><ruby>旗<rt>き</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>ボルトライコーン
-  ja_romaji: Saikyō Kijū Borutoraikōn
+  ja_romaji: Saikyōkijū Borutoraikōn
   ko:
   ko_rr:
   zh-TW:
