--- a/data/rush/15193.yaml
+++ b/data/rush/15193.yaml
@@ -65,6 +65,8 @@ images:
   illustration: PrimaGuitarnatheShiningSuperstar-DBR-EN-VG-artwork.png
 - index: 2
   image: PrimaGuitarnatheShiningSuperstar-RDCCC1-JP-NPR.png
+- index: 3
+  image: PrimaGuitarnatheShiningSuperstar-RDMRP2-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP01-JP028
