--- a/data/cards/yugipedia1012529.yaml
+++ b/data/cards/yugipedia1012529.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>熾<rt>し</rt></ruby><ruby>動<rt>どう</rt></ruby>する<ruby>煉<rt>れん</rt></ruby><ruby>獄<rt>ごく</rt></ruby>
-  ja_romaji: Shidō-suru Rengoku
+  ja_romaji: Shidōsuru Rengoku
   ko:
   ko_rr:
   zh-TW:
