--- a/data/rush/15190.yaml
+++ b/data/rush/15190.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: Strongest Battle Deck Luke - Dragon's Dragons
     rarities:
     - Common
+  - set_number: RD/MRP2-JP027
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP01-KR026
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
