--- a/data/rush/15193.yaml
+++ b/data/rush/15193.yaml
@@ -93,6 +93,11 @@ sets:
     set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 1
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/MRP2-JP060
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
+    - Over Rush Rare
   ko:
   - set_number: RD/KP01-KR028
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
