--- a/data/rush/15450.yaml
+++ b/data/rush/15450.yaml
@@ -64,6 +64,10 @@ sets:
     rarities:
     - Common
     - Super Rare
+  - set_number: RD/MRP2-JP086
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP02-KR040
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
