--- a/data/rush/15451.yaml
+++ b/data/rush/15451.yaml
@@ -66,6 +66,10 @@ sets:
     rarities:
     - Common
     - Super Rare
+  - set_number: RD/MRP2-JP087
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP02-KR041
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
