--- a/data/rush/15410.yaml
+++ b/data/rush/15410.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: '"Dark Magician Secret Rare Special Blue Version" GET Campaign'
     rarities:
     - Secret Rare
+  - set_number: RD/MRP2-JP079
+    set_name: Megaroad Pack 2
+    rarities:
+    - Rare
   ko:
   - set_number: RD/KP02-KR000
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
