--- a/data/rush/yugipedia1001993.yaml
+++ b/data/rush/yugipedia1001993.yaml
@@ -48,6 +48,7 @@ sets:
   - set_number: RD/MRP2-JP068
     set_name: Megaroad Pack 2
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
