--- a/data/rush/yugipedia1005415.yaml
+++ b/data/rush/yugipedia1005415.yaml
@@ -68,6 +68,7 @@ sets:
   - set_number: RD/MRP2-JP080
     set_name: Megaroad Pack 2
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
