--- a/data/rush/yugipedia1012496.yaml
+++ b/data/rush/yugipedia1012496.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    モンスター（天使族）を含む、自分フィールドのモンスターを素材として墓地へ送り、モンスター（光属性）をフュージョン召喚する。この効果でモンスター（天界戦士族）をフュージョン召喚する場合、手札のモンスターを素材とする事もできる。
   ko:
   zh-TW:
   zh-CN:
