--- a/data/rush/yugipedia1012500.yaml
+++ b/data/rush/yugipedia1012500.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの上からカードを５枚まで墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力はターン終了時まで５００アップする。自分の墓地に「ギフトタリスト」「ロミックンローラー」「ベリーシスト」「ドリームラマー」「キャッチーボーディスト」が全ている場合、さらに相手フィールドのカード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
