--- a/data/rush/yugipedia1012504.yaml
+++ b/data/rush/yugipedia1012504.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の手札または自分の墓地の、モンスター（闇属性／魔法使い族／攻撃力２５００）とモンスター（闇属性／魔法使い族／攻撃力２０００）をそれぞれ１体まで選び、自分フィールドに表側表示で特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
