--- a/data/rush/15150.yaml
+++ b/data/rush/15150.yaml
@@ -72,6 +72,8 @@ images:
   illustration: SevensRoadMagician-G002-JP-VG-artwork-3.png
 - index: 6
   image: SevensRoadMagician-RDCCC1-JP-NPR.png
+- index: 7
+  image: SevensRoadMagician-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ST01-JP001
