--- a/data/rush/16983.yaml
+++ b/data/rush/16983.yaml
@@ -55,6 +55,8 @@ images:
 - index: 2
   image: KimelunatheDarkShifter-RDBD05-JP-UPR.png
   illustration: KimelunatheDarkShifter-G002-JP-VG-artwork-2.png
+- index: 3
+  image: KimelunatheDarkShifter-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP07-JP017
