--- a/rush.yaml
+++ b/rush.yaml
@@ -73,6 +73,8 @@ images:
   illustration: SevensRoadMagician-G002-JP-VG-artwork-3.png
 - index: 6
   image: SevensRoadMagician-RDCCC1-JP-NPR.png
+- index: 7
+  image: SevensRoadMagician-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ST01-JP001
@@ -28421,6 +28423,8 @@ images:
 - index: 2
   image: CAND-RDBD04-JP-UPR.png
   illustration: CAND-DBR-JP-VG-artwork-2.png
+- index: 3
+  image: CAND-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP05-JP002
@@ -49121,6 +49125,8 @@ images:
 - index: 2
   image: KimelunatheDarkShifter-RDBD05-JP-UPR.png
   illustration: KimelunatheDarkShifter-G002-JP-VG-artwork-2.png
+- index: 3
+  image: KimelunatheDarkShifter-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP07-JP017
