assignments: remove DUNE, add TW01

--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -25,10 +25,6 @@
 - yugipedia: 10276
   fake_password: 10000100
 ## Prereleases
-# Duelist Nexus
-- set_abbreviation: DUNE
-  fake_password_range:
-    - 101201000
 # Age of Overlord
 - set_abbreviation: AGOV
   fake_password_range:
@@ -48,3 +44,6 @@
 # Blaze, Supreme Ruler of Dragons
 - yugipedia: 1004769
   fake_password: 100200243
+# Terminal World
+- set_abbreviation: TW01
+  fake_password_range: 100301000
