--- a/data/rush/15208.yaml
+++ b/data/rush/15208.yaml
@@ -57,6 +57,8 @@ images:
 - index: 2
   image: HammerCrush-RDGRC1-JP-SR.png
   illustration: HammerCrush-DBR-JP-VG-artwork-2.png
+- index: 3
+  image: HammerCrush-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP01-JP041
@@ -75,6 +77,10 @@ sets:
     set_name: Saikyo Starter Deck
     rarities:
     - Common
+  - set_number: RD/S23P-JP007
+    set_name: Tournament Battle October 2023 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP01-KR041
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
