--- a/rush.yaml
+++ b/rush.yaml
@@ -4312,6 +4312,8 @@ images:
 - index: 2
   image: HammerCrush-RDGRC1-JP-SR.png
   illustration: HammerCrush-DBR-JP-VG-artwork-2.png
+- index: 3
+  image: HammerCrush-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP01-JP041
@@ -4330,6 +4332,10 @@ sets:
     set_name: Saikyo Starter Deck
     rarities:
     - Common
+  - set_number: RD/S23P-JP007
+    set_name: Tournament Battle October 2023 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP01-KR041
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
@@ -5989,9 +5995,9 @@ images:
   image: GaiaTheFierceKnight-RDB221-JP-C.png
   illustration: GaiaTheFierceKnight-DBR-JP-VG-artwork.png
 - index: 2
-  image: GaiaTheFierceKnight-RDKP14-JP-ORR.png
-- index: 3
   image: GaiaTheFierceKnight-RD711C-JP-NPR.png
+- index: 3
+  image: GaiaTheFierceKnight-RDKP14-JP-ORR.png
 sets:
   ja:
   - set_number: RD/WJMP-JP001
