--- a/data/cards/04896788.yaml
+++ b/data/cards/04896788.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Enquanto este card estiver no campo com a face para cima em Posição de Ataque, se um duelista ativar "Pote da Ganância", ele pode comprar mais 1 card.
   ja: |-
-    このカードがフィールド上に表側攻撃表示で存在する時に「強欲な壺」を発動した場合、「強欲な壺」を発動したプレイヤーはカードをもう１枚ドローする事ができる。
+    ①：「強欲な壺」が発動した場合に発動する。その「強欲な壺」を発動したプレイヤーは１枚ドローできる。この効果はこのカードがモンスターゾーンに表側攻撃表示で存在する場合に発動と処理を行う。
   ko: |-
     이 카드가 필드 위에 앞면 공격 표시로 존재할 때 "욕망의 항아리"를 발동했을 경우, "욕망의 항아리"를 발동한 플레이어는 카드를 1장 더 드로우할 수 있다.
   zh-TW:
