--- a/data/cards/16278116.yaml
+++ b/data/cards/16278116.yaml
@@ -94,6 +94,11 @@ sets:
     set_name: Breakers of Shadow
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC123
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
