--- a/data/cards/22123627.yaml
+++ b/data/cards/22123627.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Embaralhe 2 monstros de ÁGUA da sua mão no Deck e, depois, compre 3 cards.
   ja: |-
-    ①：手札の水属性モンスター２体をデッキに戻してシャッフルする。その後、自分はデッキから３枚ドローする。
+    ①：手札から水属性モンスター２体をデッキに戻してシャッフルする。その後、自分は３枚ドローする。
   ko: |-
     ①: 패의 물 속성 몬스터 2장을 덱으로 되돌리고 셔플한다. 그 후, 자신은 덱에서 3장 드로우한다.
   zh-TW: |-
