--- a/data/cards/23998625.yaml
+++ b/data/cards/23998625.yaml
@@ -115,6 +115,11 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: 23SP-SC115
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
