--- a/data/cards/51790181.yaml
+++ b/data/cards/51790181.yaml
@@ -26,7 +26,7 @@ text:
     Scegli 2 carte da uno o più Cimiteri, e mischia ognuna nel Deck del proprietario. Dopo l'attivazione, rimuovi questa carta dal gioco invece di mandarla al Cimitero. Puoi attivare solo 1 "Giara della Benevolenza" per turno.
   pt:
   ja: |-
-    自分または相手の墓地に存在するカードを合計２枚選択し、持ち主のデッキに戻す。このカードは発動後、墓地へ送らずにゲームから除外する。「無欲な壺」は１ターンに１枚しか発動できない。
+    このカード名のカードは１ターンに１枚しか発動できない。①：自分・相手の墓地のカードを合計２枚対象として発動できる。そのカードをデッキに戻す。このカードは発動後、墓地へ送らずに除外する。
   ko: |-
     자신 또는 상대의 묘지에 존재하는 카드를 합하여 2장 선택하고, 주인의 덱으로 되돌린다. 이 카드는 발동 후, 묘지로 보내지 않고 게임에서 제외한다. "무욕의 항아리"는 1턴에 1번밖에 발동할 수 없다.
   zh-TW:
