--- a/data/cards/55144522.yaml
+++ b/data/cards/55144522.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Compre 2 cards.
   ja: |-
-    ①：自分はデッキから２枚ドローする。
+    ①：自分は２枚ドローする。
   ko: |-
     ①: 자신은 덱에서 2장 드로우한다.
   zh-TW:
