--- a/data/cards/11548522.yaml
+++ b/data/cards/11548522.yaml
@@ -156,6 +156,11 @@ sets:
     set_name: Advanced Event Pack 2022 Vol.1 Version 2
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: 23SP-SC106
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
