--- a/data/cards/20862918.yaml
+++ b/data/cards/20862918.yaml
@@ -98,6 +98,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: 23SP-SC121
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
