--- a/data/cards/24696097.yaml
+++ b/data/cards/24696097.yaml
@@ -175,6 +175,10 @@ sets:
     set_name: Rarity Collection 20th Anniversary Edition
     rarities:
     - Extra Secret Rare
+  - set_number: 23SP-SC101
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Ultra Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
