--- a/data/cards/30914564.yaml
+++ b/data/cards/30914564.yaml
@@ -181,7 +181,7 @@ sets:
     - Common
   zh-CN:
   - set_number: SCTP-SC151
-    set_name: SCTP-SC151
+    set_name: Entry Pack Volume 10
     rarities:
     - Common
 limit_regulation:
