--- a/data/cards/33420078.yaml
+++ b/data/cards/33420078.yaml
@@ -253,6 +253,10 @@ sets:
     set_name: Entry Pack Volume 2
     rarities:
     - Common
+  - set_number: 23SP-SC102
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
