--- a/data/cards/34755994.yaml
+++ b/data/cards/34755994.yaml
@@ -138,6 +138,10 @@ sets:
     set_name: 'Deck Build Pack: Genesis Impactors'
     rarities:
     - Super Rare
+  - set_number: 23SP-SC118
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
