--- a/data/cards/50185950.yaml
+++ b/data/cards/50185950.yaml
@@ -124,6 +124,11 @@ sets:
     set_name: 'Structure Deck R: Curse of the Dark'
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC109
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
