--- a/data/cards/53325667.yaml
+++ b/data/cards/53325667.yaml
@@ -125,6 +125,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: 23SP-SC100
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
