--- a/data/cards/53539634.yaml
+++ b/data/cards/53539634.yaml
@@ -127,6 +127,11 @@ sets:
     set_name: Expert Edition Volume 3
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC112
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
