--- a/data/cards/57355219.yaml
+++ b/data/cards/57355219.yaml
@@ -106,6 +106,11 @@ sets:
     set_name: Advanced Event Pack 2017 Vol.1
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC122
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
