--- a/data/cards/68812773.yaml
+++ b/data/cards/68812773.yaml
@@ -99,6 +99,11 @@ sets:
     set_name: 'Collectors Pack: Duelist of Legend Version'
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 23SP-SC108
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
