--- a/data/cards/69327790.yaml
+++ b/data/cards/69327790.yaml
@@ -131,6 +131,11 @@ sets:
     set_name: LINK VRAINS Pack 3
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC103
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
