--- a/data/cards/70950698.yaml
+++ b/data/cards/70950698.yaml
@@ -78,6 +78,11 @@ sets:
     set_name: 'Structure Deck: Cyberse Link'
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: 23SP-SC111
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
