--- a/data/cards/71345905.yaml
+++ b/data/cards/71345905.yaml
@@ -85,6 +85,11 @@ sets:
     set_name: Legacy of the Valiant
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 23SP-SC120
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
