--- a/data/cards/74952447.yaml
+++ b/data/cards/74952447.yaml
@@ -98,6 +98,11 @@ sets:
     set_name: The Shining Darkness
     rarities:
     - Normal Rare
+  zh-CN:
+  - set_number: 23SP-SC107
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
