--- a/data/cards/84124261.yaml
+++ b/data/cards/84124261.yaml
@@ -103,6 +103,11 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: 23SP-SC116
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
