--- a/data/cards/86652646.yaml
+++ b/data/cards/86652646.yaml
@@ -104,6 +104,11 @@ sets:
     set_name: Expert Edition Volume 3
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC105
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
