--- a/data/cards/94259633.yaml
+++ b/data/cards/94259633.yaml
@@ -138,6 +138,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Extra Secret Rare
+  - set_number: 23SP-SC117
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
