--- a/data/cards/96598015.yaml
+++ b/data/cards/96598015.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Embaralhe no Deck 3 Monstros Pêndulo do seu Cemitério e/ou com a face para cima no seu Deck Adicional e, depois, compre 2 cards. Você só pode ativar 1 "Pote das Riquezas" por turno. Você não pode Invocar por Invocação-Especial no turno em que ativar este card, exceto por Invocação-Pêndulo.
   ja: |-
-    「金満な壺」は１ターンに１枚しか発動できず、このカードを発動するターン、自分はＰ召喚以外の特殊召喚ができない。①：自分のエクストラデッキの表側表示のＰモンスター及び自分の墓地のＰモンスターを合計３体選び、デッキに加えてシャッフルする。その後、自分はデッキから２枚ドローする。
+    このカード名のカードは１ターンに１枚しか発動できず、このカードを発動するターン、自分はＰ召喚以外の特殊召喚ができない。①：自分のＥＸデッキ（表側）・墓地からＰモンスター３体をデッキに戻してシャッフルする。その後、自分は２枚ドローする。
   ko: |-
     "졸부의 항아리"는 1턴에 1장밖에 발동할 수 없으며, 이 카드를 발동하는 턴에, 자신은 펜듈럼 소환 이외의 특수 소환을 할 수 없다. ①: 자신 엑스트라 덱의 앞면 표시 펜듈럼 몬스터 및 자신 묘지의 펜듈럼 몬스터를 합계 3장 고르고, 덱에 넣어 셔플한다. 그 후, 자신은 덱에서 2장 드로우한다.
   zh-TW:
