--- a/data/cards/98645731.yaml
+++ b/data/cards/98645731.yaml
@@ -27,13 +27,13 @@ text:
   pt: |-
     Escave os 3 cards do topo do seu Deck, adicione 1 deles à sua mão e, além disso, depois, embaralhe o resto de volta no seu Deck. Você só pode ativar 1 "Pote da Dualidade" por turno. Você não pode Invocar por Invocação-Especial durante o turno em que ativar este card.
   ja: |-
-    このカード名のカードは１ターンに１枚しか発動できず、このカードを発動するターン、自分はモンスターを特殊召喚できない。①：自分のデッキの上からカードを３枚めくり、その中から１枚を選んで手札に加え、その後残りのカードをデッキに戻す。
+    このカード名のカードは１ターンに１枚しか発動できず、このカードを発動するターン、自分はモンスターを特殊召喚できない。①：自分のデッキの上からカードを３枚めくり、その中から１枚を選んで手札に加える。その後、残りのカードをデッキに戻す。
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없으며, 이 카드를 발동하는 턴에, 자신은 몬스터를 특수 소환할 수 없다. ①: 자신의 덱 위에서 카드를 3장 넘겨, 그 중에서 1장을 골라 패에 넣고, 그 후 남은 카드를 덱으로 되돌린다.
   zh-TW: |-
     从我方牌组的上方依序翻阅3张卡牌，从中挑选1张加入手牌，之后将剩下的卡牌返回至牌组。「強欲而謙虛之壺」1回合只可发动1张，发动此卡的回合，我方不可特殊召唤怪兽。
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张，发动此卡的回合中，自己不可特殊召唤怪兽。①：从自己的牌组上面翻开3张卡，从其中挑选1张加入手牌，然后将剩下的卡放回牌组。
+    此卡名的卡１回合仅可发动１张，发动此卡的回合中，自己不可特殊召唤怪兽。①：从自己的牌组上面翻开３张卡，从其中挑选１张加入手牌，然后将剩余的卡放回牌组。
 card_type: Spell
 property: Normal
 series:
@@ -420,6 +420,10 @@ sets:
     set_name: Starter Deck 2021 Special Pack
     rarities:
     - Super Rare
+  - set_number: 23SP-SC119
+    set_name: Entry Pack 2023 Vol.1
+    rarities:
+    - Common
   - set_number: TBC1-SCS07
     set_name: The Pot Collection
     rarities:
