--- a/data/cards/98672567.yaml
+++ b/data/cards/98672567.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     No começo da sua Fase Principal 1: escolha 3 monstros com Tipos diferentes no seu Cemitério; embaralhe os 3 no Deck e, depois, compre 2 cards. Você não pode conduzir sua Fase de Batalha no turno em que ativar este card.
   ja: |-
-    メインフェイズ１の開始時に自分の墓地から異なる種族のモンスター３体を選択して発動できる。選択したモンスター３体をデッキに加えてシャッフルする。その後、デッキからカードを２枚ドローする。このカードを発動するターン、自分はバトルフェイズを行えない。
+    このカードを発動するターン、自分はバトルフェイズを行えない。①：自分メインフェイズ１開始時に、自分の墓地のモンスター３体を対象として発動できる（同じ種族は１体まで）。そのモンスター３体をデッキに戻してシャッフルする。その後、自分は２枚ドローする。
   ko: |-
     메인 페이즈 1의 개시시에 자신의 묘지에서 다른 종족의 몬스터 3장을 선택하고 발동할 수 있다. 선택한 몬스터 3장을 덱에 넣고 셔플한다. 그 후, 덱에서 카드를 2장 드로우한다. 이 카드를 발동하는 턴에, 자신은 배틀 페이즈를 실행할 수 없다.
   zh-TW:
