--- a/data/cards/08763963.yaml
+++ b/data/cards/08763963.yaml
@@ -61,7 +61,7 @@ sets:
     rarities:
     - Common
   - set_number: YF08-EN001
-    set_name: Yu-Gi-Oh! 5D's volume 8 promotional card
+    set_name: Yu-Gi-Oh! 5D's Volume 8 promotional card
     rarities:
     - Ultra Rare
   de:
@@ -86,7 +86,7 @@ sets:
     - Common
   ja:
   - set_number: YF08-JP001
-    set_name: Yu-Gi-Oh! 5D's volume 8 promotional card
+    set_name: Yu-Gi-Oh! 5D's Volume 8 promotional card
     rarities:
     - Ultra Rare
   ko:
