--- a/data/cards/11110218.yaml
+++ b/data/cards/11110218.yaml
@@ -94,6 +94,11 @@ sets:
     set_name: World Premiere Pack 2021
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 23SP-SC222
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
