--- a/data/cards/47594939.yaml
+++ b/data/cards/47594939.yaml
@@ -136,6 +136,11 @@ sets:
     set_name: Primal Origin
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC221
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
