--- a/data/cards/54191698.yaml
+++ b/data/cards/54191698.yaml
@@ -115,6 +115,11 @@ sets:
     set_name: Collectors Pack 2017
     rarities:
     - Normal Rare
+  zh-CN:
+  - set_number: 23SP-SC203
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
