--- a/data/cards/94183877.yaml
+++ b/data/cards/94183877.yaml
@@ -93,6 +93,10 @@ sets:
     set_name: Mega Pack 04
     rarities:
     - Rare
+  - set_number: 23SP-SC202
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
