--- a/data/cards/07614732.yaml
+++ b/data/cards/07614732.yaml
@@ -112,6 +112,11 @@ sets:
     set_name: World Premiere Pack 2021
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 23SP-SC218
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
