--- a/data/cards/10186633.yaml
+++ b/data/cards/10186633.yaml
@@ -76,6 +76,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: 23SP-SC219
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
