--- a/data/cards/16037007.yaml
+++ b/data/cards/16037007.yaml
@@ -116,6 +116,11 @@ sets:
     rarities:
     - Secret Rare
     - Collector's Rare
+  zh-CN:
+  - set_number: 23SP-SC217
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
