--- a/data/cards/34267821.yaml
+++ b/data/cards/34267821.yaml
@@ -227,6 +227,10 @@ sets:
     set_name: Starter Deck 2021 Special Pack
     rarities:
     - Super Rare
+  - set_number: 23SP-SC210
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
