--- a/data/cards/34853266.yaml
+++ b/data/cards/34853266.yaml
@@ -210,6 +210,11 @@ sets:
     set_name: 20th Anniversary Pack 1st Wave
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: 23SP-SC208
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
