--- a/data/cards/42880485.yaml
+++ b/data/cards/42880485.yaml
@@ -121,6 +121,11 @@ sets:
     set_name: Breakers of Shadow
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 23SP-SC211
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
