--- a/data/cards/55990317.yaml
+++ b/data/cards/55990317.yaml
@@ -115,6 +115,10 @@ sets:
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
+  - set_number: 23SP-SC200
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
