--- a/data/cards/59123937.yaml
+++ b/data/cards/59123937.yaml
@@ -80,6 +80,11 @@ sets:
     set_name: Code of the Duelist
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC213
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
