--- a/data/cards/63731062.yaml
+++ b/data/cards/63731062.yaml
@@ -116,6 +116,11 @@ sets:
     rarities:
     - Normal Parallel Rare
     - Super Rare
+  zh-CN:
+  - set_number: 23SP-SC215
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
