--- a/data/cards/70219023.yaml
+++ b/data/cards/70219023.yaml
@@ -136,6 +136,11 @@ sets:
     set_name: World Premiere Pack 2021
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 23SP-SC214
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
