--- a/data/cards/73964868.yaml
+++ b/data/cards/73964868.yaml
@@ -203,6 +203,10 @@ sets:
     set_name: 'Structure Deck: Blitzkrieg of the Mechlight Dragons Deck Enhancement Pack'
     rarities:
     - Ultra Rare
+  - set_number: 23SP-SC216
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
