--- a/data/cards/76862289.yaml
+++ b/data/cards/76862289.yaml
@@ -145,6 +145,11 @@ sets:
     set_name: Tournament Pack 6
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 23SP-SC207
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
