--- a/data/cards/77428945.yaml
+++ b/data/cards/77428945.yaml
@@ -78,6 +78,11 @@ sets:
     set_name: Shadow Specters
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC209
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
