--- a/data/cards/78060096.yaml
+++ b/data/cards/78060096.yaml
@@ -150,6 +150,11 @@ sets:
     set_name: Expert Edition Volume.2
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC205
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
