--- a/data/cards/80036543.yaml
+++ b/data/cards/80036543.yaml
@@ -102,6 +102,11 @@ sets:
     set_name: 'Structure Deck: Pendulum Domination'
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC220
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
