--- a/data/cards/91351370.yaml
+++ b/data/cards/91351370.yaml
@@ -223,6 +223,10 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 3'
     rarities:
     - Common
+  - set_number: 23SP-SC204
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
