--- a/data/cards/93717133.yaml
+++ b/data/cards/93717133.yaml
@@ -279,6 +279,10 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 3'
     rarities:
     - Common
+  - set_number: 23SP-SC201
+    set_name: Entry Pack 2023 Vol.2
+    rarities:
+    - Ultra Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
