--- a/rush.yaml
+++ b/rush.yaml
@@ -117500,7 +117500,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドのモンスターを全て墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -117512,7 +117513,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。この効果の発動後、ターン終了時まで自分はモンスター（天界戦士族・戦士族・天使族）しか召喚・特殊召喚できない。
   ko:
   zh-TW:
   zh-CN:
