--- a/data/rush/18582.yaml
+++ b/data/rush/18582.yaml
@@ -40,6 +40,9 @@ requirement:
     몬스터 3장을 릴리스하고 이 카드를 일반 소환한 턴에 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     Destroy all monsters on your opponent's field.
