--- a/data/rush/18610.yaml
+++ b/data/rush/18610.yaml
@@ -40,6 +40,9 @@ requirement:
     이 카드를 일반 소환한 턴에, 자신 묘지의 몬스터(전사족) 2장을 덱으로 되돌리고 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     This turn, this card can make up to 3 attacks on monsters.
