--- a/rush.yaml
+++ b/rush.yaml
@@ -55436,6 +55436,9 @@ requirement:
     자신의 패가 있을 경우에 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     Special Summon 1 monster from your Graveyard face-up to your field. Then, send 1 card from your hand to the Graveyard.
@@ -91573,6 +91576,9 @@ requirement:
     몬스터 3장을 릴리스하고 이 카드를 일반 소환한 턴에 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     Destroy all monsters on your opponent's field.
@@ -93525,6 +93531,9 @@ requirement:
     이 카드를 일반 소환한 턴에, 자신 묘지의 몬스터(전사족) 2장을 덱으로 되돌리고 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     This turn, this card can make up to 3 attacks on monsters.
@@ -93608,6 +93617,9 @@ requirement:
     이 카드를 일반 소환한 턴에 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     Equip up to 3 Equip Spell Cards from your Graveyard to a face-up Warrior Type monster(s) on your field.
