--- a/data/cards/yugipedia1012422.yaml
+++ b/data/cards/yugipedia1012422.yaml
@@ -41,6 +41,14 @@ sets:
   - set_number: PHNI-JP018
     set_name: Phantom Nightmare
     rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: PHNI-JP018
+    set_name: Phantom Nightmare +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
