--- a/data/cards/38430673.yaml
+++ b/data/cards/38430673.yaml
@@ -37,7 +37,11 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
+  image: GrandConvergence-LART-EN-UR-LE.png
+  illustration: GrandConvergence-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: GrandConvergence-SGX3-EN-C-1E.png
+  illustration: GrandConvergence-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: EOJ-EN046
@@ -56,6 +60,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: LART-EN062
+    set_name: The Lost Art Promotion 2023 I
+    rarities:
+    - Ultra Rare
   - set_number: DR04-EN226
     set_name: Dark Revelation Volume 4
     rarities:
@@ -77,6 +85,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: LART-DE062
+    set_name: The Lost Art Promotion 2023 I
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: EOJ-FR046
     set_name: Enemy of Justice
@@ -90,6 +102,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: LART-FR062
+    set_name: The Lost Art Promotion 2023 I
+    rarities:
+    - Ultra Rare
   it:
   - set_number: EOJ-IT046
     set_name: Enemy of Justice
@@ -107,11 +123,19 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: LART-IT062
+    set_name: The Lost Art Promotion 2023 I
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SGX3-PTF16
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: LART-PT062
+    set_name: The Lost Art Promotion 2023 I
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EOJ-JP046
     set_name: Enemy of Justice
