--- a/data/cards/74095602.yaml
+++ b/data/cards/74095602.yaml
@@ -8,7 +8,7 @@ name:
   it: Cambio d'Eroe - Raggio Riflettore
   pt:
   ja: <ruby>英雄変化<rt>チェンジ・オブ・ヒーロー</rt></ruby>－リフレクター・レイ
-  ja_romaji: Chenji Obu Hīrō Rifurekutā Rei
+  ja_romaji: Chenji Obu Hīrō - Rifurekutā Rei
   ko: 영웅변화－리플렉터 레이
   ko_rr:
   zh-TW:
