--- a/data/cards/01347977.yaml
+++ b/data/cards/01347977.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 神圣守卫者
 text:
   en: |-
-    FLIP: Target 1 face-up monster on the field, and if you control a face-up Warrior monster, you can target 1 additional face-up monster on the field; place the first target to the top of the Deck, then return the additional target (if any) to the hand if you still control a face-up Warrior monster.
+    FLIP: Target 1 face-up monster on the field, and if you control a Warrior monster, you can target 1 additional face-up monster on the field; place the first target on top of the Deck, then return the additional target (if any) to the hand if you still control a Warrior monster.
   de: |-
     FLIPP: Wähle 1 offenes Monster auf dem Spielfeld und falls du ein offenes Krieger-Monster kontrollierst, kannst du 1 zusätzliches offenes Monster auf dem Spielfeld wählen; lege das erste gewählte Ziel aufs Deck, dann gib das zusätzliche gewählte Ziel (falls es eins gibt) auf die Hand zurück, falls du immer noch ein offenes Krieger-Monster kontrollierst.
   es: |-
