--- a/data/rush/18679.yaml
+++ b/data/rush/18679.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: Yu-Gi-Oh! GO RUSH!! Volume 2 promotional card
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: RD/????-KR???
+    set_name: Express Pack
+    rarities:
 is_translation_unofficial:
   name:
     en: true
