--- a/data/rush/18940.yaml
+++ b/data/rush/18940.yaml
@@ -58,6 +58,10 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: RD/BDG6-JP001
+    set_name: Yu-Gi-Oh! GO RUSH!! Duel-6 Blu-ray & DVD promotional card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP13-KR011
     set_name: Oblivion of the Flash
