--- a/data/rush/18941.yaml
+++ b/data/rush/18941.yaml
@@ -51,6 +51,8 @@ series:
 images:
 - index: 1
   image: CelebRoseMagician-RDKP13-JP-SR.png
+- index: 2
+  image: CelebRoseMagician-RDBDG5-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP13-JP012
