--- a/data/cards/19327348.yaml
+++ b/data/cards/19327348.yaml
@@ -84,6 +84,11 @@ sets:
     set_name: Duelist Card Protector Six Attribute Set
     rarities:
     - Secret Rare
+  - set_number: ????-JP00?
+    set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: TDGS-KR026
     set_name: The Duelist Genesis
