--- a/data/cards/73318863.yaml
+++ b/data/cards/73318863.yaml
@@ -87,6 +87,11 @@ sets:
     set_name: Duelist Card Protector Six Attribute Set
     rarities:
     - Secret Rare
+  - set_number: ????-JP00?
+    set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: TSHD-KR024
     set_name: The Shining Darkness
