--- a/data/rush/18969.yaml
+++ b/data/rush/18969.yaml
@@ -73,6 +73,10 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Over Rush Rare
+  - set_number: RD/D002-JP004
+    set_name: Yu-Gi-Oh! GO RUSH!! Complete Challenge 4
+    rarities:
+    - Rush Rare
   ko:
   - set_number: RD/KP13-KR040
     set_name: Oblivion of the Flash
