--- a/data/cards/73061465.yaml
+++ b/data/cards/73061465.yaml
@@ -43,7 +43,11 @@ series:
 - Ice Barrier
 images:
 - index: 1
+  image: SpellbreakeroftheIceBarrier-SD40-JP-C.png
+  illustration: SpellbreakeroftheIceBarrier-TF04-JP-VG.png
+- index: '1.1'
   image: SpellbreakeroftheIceBarrier-HAC1-EN-C-1E.png
+  illustration: SpellbreakeroftheIceBarrier-TF06-EN-VG.png
 sets:
   en:
   - set_number: HA03-EN048
