--- a/data/rush/16607.yaml
+++ b/data/rush/16607.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. This turn, you cannot attack with Level 6 or lower monsters.
+    Draw 1 card. This turn, your Level 6 or lower monsters cannot attack.
   de:
   es:
   fr:
