--- a/data/rush/17533.yaml
+++ b/data/rush/17533.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up monster with 2000 or more DEF on your opponent's field. Gain 800 LP, and inflict 800 damage to your opponent. This turn, you cannot attack with Effect Monsters.
+    Destroy 1 face-up monster with 2000 or more DEF on your opponent's field. Gain 800 LP, and inflict 800 damage to your opponent. This turn, your Effect Monsters cannot attack.
   de:
   es:
   fr:
