--- a/data/rush/19134.yaml
+++ b/data/rush/19134.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. This turn, your opponent cannot attack with Level 7 or lower monsters.
+    Negate the attack. This turn, your opponent's Level 7 or lower monsters cannot attack.
   de:
   es:
   fr:
