--- a/data/rush/yugipedia1013207.yaml
+++ b/data/rush/yugipedia1013207.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドにこのカード以外のモンスターがいない場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル８／炎属性・闇属性／戦士族）１体を選んで手札に加える。このターン、自分はモンスター（守備力１９００以下）で攻撃できない。
   ko:
   zh-TW:
   zh-CN:
