--- a/rush.yaml
+++ b/rush.yaml
@@ -35669,7 +35669,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. This turn, you cannot attack with Level 6 or lower monsters.
+    Draw 1 card. This turn, your Level 6 or lower monsters cannot attack.
   de:
   es:
   fr:
@@ -44958,7 +44958,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Straynge Cat" from your Graveyard to your hand. Then, you can draw 1 card. If you drew by this effect, you cannot attack with Level 6 or lower monsters this turn.
+    Add 1 "Straynge Cat" from your Graveyard to your hand. Then, you can draw 1 card. If you drew by this effect, this turn, your Level 6 or lower monsters cannot attack.
   de:
   es:
   fr:
@@ -48966,7 +48966,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 7 or higher Warrior Type monster from your Graveyard to your hand. This turn, you cannot attack with monsters with 1900 or less DEF.
+    Add 1 Level 7 or higher Warrior Type monster from your Graveyard to your hand. This turn, your monsters with 1900 or less DEF cannot attack.
   de:
   es:
   fr:
@@ -53756,7 +53756,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy all monsters on your opponent's field. This turn, you cannot attack with "Blue-Eyes White Dragon".
+    Destroy all monsters on your opponent's field. Your "Blue-Eyes White Dragon" cannot attack this turn.
   de:
   es:
   fr:
@@ -61301,7 +61301,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Normal Monster from your Graveyard to your hand. This turn, you cannot attack with Level 8 or lower Effect Monsters.
+    Add 1 Normal Monster from your Graveyard to your hand. This turn, your Level 8 or lower Effect Monsters cannot attack.
   de:
   es:
   fr:
@@ -63752,7 +63752,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up monster with 2000 or more DEF on your opponent's field. Gain 800 LP, and inflict 800 damage to your opponent. This turn, you cannot attack with Effect Monsters.
+    Destroy 1 face-up monster with 2000 or more DEF on your opponent's field. Gain 800 LP, and inflict 800 damage to your opponent. This turn, your Effect Monsters cannot attack.
   de:
   es:
   fr:
@@ -70603,7 +70603,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 Spell/Trap Card on your opponent's field, and destroy all other Spell/Trap Cards on their field. This turn, your monsters cannot attack.
+    Choose 1 Spell/Trap Card on your opponent's field, and destroy all other Spell/Trap Cards on their field. Your monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -89936,7 +89936,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, you can choose 1 face-up Level 8 or lower monster on your opponent's field. If you do, during your opponent's next turn, they cannot attack with that monster.
+    Send the top card of your Deck to the Graveyard. Then, you can choose 1 face-up Level 8 or lower monster on your opponent's field. If you do, your opponent cannot attack with that monster during their next turn.
   de:
   es:
   fr:
@@ -109779,7 +109779,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. This turn, your opponent cannot attack with Level 7 or lower monsters.
+    Negate the attack. This turn, your opponent's Level 7 or lower monsters cannot attack.
   de:
   es:
   fr:
@@ -117673,7 +117673,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドにこのカード以外のモンスターがいない場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -117685,7 +117686,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル８／炎属性・闇属性／戦士族）１体を選んで手札に加える。このターン、自分はモンスター（守備力１９００以下）で攻撃できない。
   ko:
   zh-TW:
   zh-CN:
