--- a/data/cards/43905751.yaml
+++ b/data/cards/43905751.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>魔<rt>マ</rt></ruby><ruby>人<rt>ジン</rt></ruby><ruby>銃<rt>ガン</rt></ruby>
-  ja_romaji: Majin Gan
+  ja_romaji: Majingan
   ko:
   ko_rr:
   zh-TW:
