--- a/data/cards/kdb19273.yaml
+++ b/data/cards/kdb19273.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19273
 password:
 name:
   en: Junk Mail
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードをＳ素材としたＳモンスターは戦闘では破壊されない。②：このターンに墓地へ送られていないこのカードが墓地に存在し、元々のカード名に「ウォリアー」、「シンクロン」、「スターダスト」の内、いずれかを含むＳモンスターが自分フィールドに存在する場合に発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。
   ko:
   zh-TW:
   zh-CN:
@@ -38,13 +39,13 @@ images:
   image: JunkMail-VJMP-JP-OP.png
 sets:
   ja:
-  - set_number: VJMP-JP2??
+  - set_number: VJMP-JP239
     set_name: V Jump Fall 2023 subscription bonus
     rarities:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   text:
     en: true
