--- a/data/cards/kdb19542.yaml
+++ b/data/cards/kdb19542.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19542
 password:
 name:
   en: Blaze, Supreme Ruler of Dragons
@@ -22,7 +22,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    レベル７モンスター×２
+    このカード名の②の効果は１ターンに１度しか使用できない。①：１ターンに１度、このカードのＸ素材を１つ取り除いて発動できる。自分の手札・フィールドのカード１枚と相手フィールドのカード１枚を破壊する。②：ドラゴン族か炎属性のモンスターを自分の手札・墓地から２体除外して発動できる。このカードを墓地から特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合にＥＸデッキに戻る。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +46,7 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
