--- a/data/cards/kdb9406.yaml
+++ b/data/cards/kdb9406.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 9406
 password:
 name:
   en: Burgundy the Magic Elf
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがモンスターゾーンに存在する状態で、相手の手札が効果で捨てられた場合に発動できる。その枚数×４００ダメージを相手に与える。②：このカードが戦闘で破壊され墓地へ送られた時に発動できる。相手の手札をランダムに１枚捨てる。
   ko:
   zh-TW:
   zh-CN:
@@ -36,13 +37,13 @@ images:
   image: BurgundytheMagicElf-VJMP-JP-OP.png
 sets:
   ja:
-  - set_number: VJMP-JP2??
+  - set_number: VJMP-JP240
     set_name: V Jump Fall 2023 subscription bonus
     rarities:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   text:
     en: true
