--- a/data/cards/03121655.yaml
+++ b/data/cards/03121655.yaml
@@ -1,5 +1,5 @@
 konami_id: 19272
-password:
+password: 3121655
 name:
   en: Junk Dragonlet
   de:
@@ -36,7 +36,7 @@ series:
 - Junk
 images:
 - index: 1
-  image: JunkDragonlet-VJMP-JP-OP.png
+  image: JunkDragonlet-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP238
