--- a/data/cards/kdb9406.yaml
+++ b/data/cards/kdb9406.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a card(s) is discarded from your opponent's hand by a card effect while you control this monster: You can inflict 400 damage to your opponent for each discarded card. When this card is destroyed by battle and sent to the GY: You can discard 1 random card from your opponent's hand. You can only use each effect of "Burgundy the Magic Elf" once per turn.
+    If a card(s) is discarded from your opponent's hand by a card effect while you control this monster (except during the Damage Step): You can inflict 400 damage to your opponent for each discarded card. When this card is destroyed by battle and sent to the GY: You can discard 1 random card from your opponent's hand. You can only use each effect of "Burgundy the Magic Elf" once per turn.
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 1600
 def: 1400
 images:
 - index: 1
-  image: BurgundytheMagicElf-VJMP-JP-OP.png
+  image: BurgundytheMagicElf-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP240
