--- a/rush.yaml
+++ b/rush.yaml
@@ -117699,6 +117699,60 @@ yugipedia_page_id: 1013207
 ---
 konami_id:
 name:
+  en: 7 Shift
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>7<rt>セブン</rt></ruby>シフト
+  ja_romaji: Sebun Shifuto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Level 7 or lower Effect Monster from your hand face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: 7Shift-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP033
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1013368
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
