--- a/data/cards/00135598.yaml
+++ b/data/cards/00135598.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     这张卡被战斗破坏送去墓地时，可以从卡组把1只3星以下的兽族怪兽加入手卡。
 card_type: Monster
-monster_type_line: Beast / Tuner
+monster_type_line: Beast / Tuner / Effect
 attribute: EARTH
 level: 1
 atk: 100
