--- a/data/cards/23002292.yaml
+++ b/data/cards/23002292.yaml
@@ -37,7 +37,7 @@ card_type: Trap
 property: Counter
 images:
 - index: 1
-  image: RedReboot-DUDE-EN-UR-1E.png
+  image: RedReboot-OP19-EN-C-UE.png
 sets:
   en:
   - set_number: FLOD-EN068
