--- a/rush.yaml
+++ b/rush.yaml
@@ -47528,6 +47528,11 @@ sets:
     set_name: Secret Record Pack
     rarities:
     - Secret Rare
+  - set_number: RD/EPP1-KR045
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
@@ -55474,6 +55479,11 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Rush Rare
+  - set_number: RD/EPP1-KR043
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
@@ -71887,6 +71897,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Secret Rare
+  - set_number: RD/EPP1-KR040
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
@@ -96774,7 +96789,7 @@ sets:
     rarities:
     - Ultra Rare
   ko:
-  - set_number: RD/????-KR???
+  - set_number: RD/EPP1-KR???
     set_name: Express Pack
     rarities:
 is_translation_unofficial:
@@ -102018,7 +102033,7 @@ sets:
     rarities:
     - Normal Parallel Rare
   ko:
-  - set_number: RD/????-KR???
+  - set_number: RD/EPP1-KR???
     set_name: Express Pack
     rarities:
 is_translation_unofficial:
@@ -117719,7 +117734,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札１枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -117731,7 +117747,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札の効果モンスター（レベル７以下）１体を自分フィールドに表側表示で特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
