--- a/data/cards/04810828.yaml
+++ b/data/cards/04810828.yaml
@@ -120,6 +120,10 @@ sets:
     set_name: LINK VRAINS Pack 3
     rarities:
     - Rare
+  - set_number: 23TP-JP407
+    set_name: Tournament Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: INOV-KR037
     set_name: 'Invasion: Vengeance'
