--- a/data/cards/67441435.yaml
+++ b/data/cards/67441435.yaml
@@ -147,6 +147,10 @@ sets:
     rarities:
     - Common
     - Super Rare
+  - set_number: 23TP-JP405
+    set_name: Tournament Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: STBL-KR018
     set_name: Starstrike Blast
