--- a/data/cards/02295440.yaml
+++ b/data/cards/02295440.yaml
@@ -318,6 +318,10 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: 23TP-JP411
+    set_name: Tournament Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: RGBT-KR045
     set_name: Raging Battle
