--- a/data/cards/05614808.yaml
+++ b/data/cards/05614808.yaml
@@ -87,6 +87,10 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: 23TP-JP408
+    set_name: Tournament Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: CP17-KR020
     set_name: Collectors Pack 2017
