--- a/data/cards/73082255.yaml
+++ b/data/cards/73082255.yaml
@@ -115,6 +115,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: 23TP-JP409
+    set_name: Tournament Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: BACH-KR045
     set_name: Battle of Chaos
