--- a/data/cards/95992081.yaml
+++ b/data/cards/95992081.yaml
@@ -146,6 +146,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Collector's Rare
+  - set_number: 23TP-JP410
+    set_name: Tournament Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: GENF-KR043
     set_name: Generation Force
